--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             </div>
           </a>
           <div class="header__decoration">
-            <span class="header__decorative-text">ПОДІЇ</span>
+            <a href="#events" class="header__decorative-text">ПОДІЇ</a>
             <div class="header__line"></div>
           </div>
         </div>
