fixed menu pseudoelement space between sections button size footer

--- a/src/index.html
+++ b/src/index.html
@@ -218,13 +218,15 @@
           <h2 class="subscription__title">Підписка</h2>
           <p class="subscription__paragraph">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form action="#" class="form">
-            <input
+            <label>
+              <input
               type="email"
               name="email"
               placeholder="E-mail"
               class="form__input"
               required
-            >
+             >
+            </label>
             <button class="form__button" type="submit"></button>
           </form>
         </div>
