--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU | ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -17,7 +21,7 @@
       type="image/ico"
       href="./images/logos/favicon.ico"
     >
-    <script src="scripts/main.js" defer></script>
+
   </head>
   <body class="page__body">
     <header class="header">
@@ -233,7 +237,32 @@
       </section>
 
       <section class="page__section gallery" id="gallery">
-        <h2>Галерея</h2>
+        <h2 class="gallery__tittle">Галерея</h2>
+
+        <div class="gallery__content">
+          <div class="gallery__item gallery__item-1"></div>
+
+          <div class="gallery__item gallery__item-2"></div>
+
+          <div class="gallery__item gallery__item-3"></div>
+
+          <div class="gallery__item gallery__item-4"></div>
+        </div>
+
+        <div class="slider swiper">
+          <div class="slider__wrap swiper-wrapper">
+            <div class="slider__slide slider__slide-1 swiper-slide"></div>
+
+            <div class="slider__slide slider__slide-2 swiper-slide"></div>
+
+            <div class="slider__slide slider__slide-3 swiper-slide"></div>
+
+            <div class="slider__slide slider__slide-4 swiper-slide"></div>
+          </div>
+
+          <div class="slider__pagination swiper-pagination"></div>
+
+        </div>
       </section>
 
       <section class="page__section subscribe" id="subscribe">
@@ -244,5 +273,8 @@
     <footer class="contacts">
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
