--- a/src/index.html
+++ b/src/index.html
@@ -51,26 +51,20 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="top-actions">
-          <a href="#menu" class="header__menu-opener icon"></a>
-        </div>
 
-        <div class="header__decorative decorative">
-          <p class="decorative__item">події</p>
-        </div>
+      <div class="top-actions">
+        <a href="#menu" class="header__menu-opener icon"></a>
       </div>
 
+      <div class="header__decorative decorative">
+        <p class="decorative__item">події</p>
+      </div>
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
-          <div class="top-actions menu__top">
-            <a href="#" class="icon menu__cross"></a>
-          </div>
-
-          <div class="menu__blocks">
+      <div class="menu__content">
+        <div class="menu__blocks">
+          <div class="container">
             <ul class="menu__list">
               <li class="menu__item">
                 <a href="#gallery" class="menu__link">
@@ -91,128 +85,124 @@
                   події
                 </a>
               </li>
-
+              
               <li class="menu__item">
                 <a href="#contacts" class="menu__link">
                   Контакти
                 </a>
               </li>
             </ul>
+          </div>
 
-            <div class="menu__splitter">
-            </div>
+          <div class="menu__splitter">
+          </div>
 
-            <div class="menu__shedule">
-              <h4 class="menu__shedule-tittle">
-                Графік роботи
-              </h4>
+          <div class="menu__shedule">
+            <h4 class="menu__shedule-tittle">
+              Графік роботи
+            </h4>
 
-              <div class="menu__shedule-content">
-                <ul class="menu__open-days">
-                  <li class="menu__shedule-day">
-                    <strong>12:00 — 20:00</strong> середа
-                  </li>
+            <div class="menu__shedule-content">
+              <ul class="menu__open-days">
+                <li class="menu__shedule-day">
+                  <strong>12:00 — 20:00</strong> середа
+                </li>
 
-                  <li class="menu__shedule-day">
-                    <strong>12:00 — 20:00</strong> четвер
-                  </li>
+                <li class="menu__shedule-day">
+                  <strong>12:00 — 20:00</strong> четвер
+                </li>
 
-                  <li class="menu__shedule-day">
-                    <strong>12:00 — 20:00</strong> п’ятниця
-                  </li>
+                <li class="menu__shedule-day">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </li>
 
-                  <li class="menu__shedule-day">
-                    <strong>11:00 — 19:00</strong> субота
-                  </li>
+                <li class="menu__shedule-day">
+                  <strong>11:00 — 19:00</strong> субота
+                </li>
 
-                  <li class="menu__shedule-day">
-                    <strong>11:00 — 19:00</strong> неділя
-                  </li>
-                </ul>
-
-                <div class="menu__days-off">
-                  <strong>Вихідні:</strong> понеділок, вівторок
-                  <br>
-                  Каса припиняє роботу за 1 годину до закриття музею
-                </div>
+                <li class="menu__shedule-day">
+                  <strong>11:00 — 19:00</strong> неділя
+                </li>
+              </ul>
+              <div class="menu__days-off">
+                <strong>Вихідні:</strong> понеділок,вівторок
+                <br>
+                Каса припиняє роботу за 1 годину дозакриття музею
               </div>
             </div>
           </div>
         </div>
       </div>
+
+
+      <div class="top-actions menu__top">
+        <a href="#" class="icon menu__cross"></a>
+      </div>
     </nav>
 
     <main class="page__content">
       <section class="page__section events" id="events">
-        <h2 class="events__tittle">
-          Актуальні події
-        </h2>
-
-        <div
-          class="
-            events__exhibition
-            exhibition
-            events__exhibition--first_top_margin
-            grid
-            grid--desktop
-          ">
-          <img
-            src="./images/events_foto/event_1.jpg"
-            alt="Йду і повертаюсь"
-            class="exhibition__img grid__item--desktop-1-7"
-          >
-
-          <div class="exhibition__content grid__item--desktop-8-12">
-            <div class="exhibition__caption">
-              <div class="exhibition__caption-tittle">
-                виставка
+        <div class="container">
+          <h2 class="events__tittle">
+            Актуальні події
+          </h2>
+          <div
+            class="
+              events__exhibition
+              exhibition
+              events__exhibition--first_top_margin
+              grid
+              grid--desktop
+            ">
+            <img
+              src="./images/events_foto/event_1.jpg"
+              alt="Йду і повертаюсь"
+              class="exhibition__img grid__item--desktop-1-7"
+            >
+            <div class="exhibition__content grid__item--desktop-8-12">
+              <div class="exhibition__caption">
+                <div class="exhibition__caption-tittle">
+                  виставка
+                </div>
+                <div class="exhibition__date">
+                  26.08-29.11.2019
+                </div>
               </div>
-
-              <div class="exhibition__date">
-                26.08-29.11.2019
+              <h3 class="exhibition__tittle">
+                Йду і повертаюсь
+              </h3>
+              <div class="exhibition__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
               </div>
-            </div>
-
-            <h3 class="exhibition__tittle">
-              Йду і повертаюсь
-            </h3>
-
-            <div class="exhibition__description">
-              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
             </div>
           </div>
-        </div>
-
-        <div
-          class="
-            events__exhibition
-            exhibition
-            grid
-            grid--desktop
-          ">
-          <img
-            src="./images/events_foto/event_2.jpg"
-            alt="І спогади і мрії"
-            class="exhibition__img grid__item--desktop-1-7"
-          >
-
-          <div class="exhibition__content grid__item--desktop-8-12">
-            <div class="exhibition__caption">
-              <div class="exhibition__caption-tittle">
-                виставка
+          <div
+            class="
+              events__exhibition
+              exhibition
+              grid
+              grid--desktop
+            ">
+            <img
+              src="./images/events_foto/event_2.jpg"
+              alt="І спогади і мрії"
+              class="exhibition__img grid__item--desktop-1-7"
+            >
+            <div class="exhibition__content grid__item--desktop-8-12">
+              <div class="exhibition__caption">
+                <div class="exhibition__caption-tittle">
+                  виставка
+                </div>
+                <div class="exhibition__date">
+                  26.08-29.11.2019
+                </div>
               </div>
-
-              <div class="exhibition__date">
-                26.08-29.11.2019
+              <h3 class="exhibition__tittle">
+                І спогади і мрії
+              </h3>
+              <div class="exhibition__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </div>
-            </div>
-
-            <h3 class="exhibition__tittle">
-              І спогади і мрії
-            </h3>
-
-            <div class="exhibition__description">
-              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </div>
           </div>
         </div>
@@ -237,40 +227,44 @@
       </section>
 
       <section class="page__section gallery" id="gallery">
-        <h2 class="gallery__tittle">Галерея</h2>
-
-        <div class="gallery__content">
-          <div class="gallery__item gallery__item-1"></div>
-
-          <div class="gallery__item gallery__item-2"></div>
-
-          <div class="gallery__item gallery__item-3"></div>
-
-          <div class="gallery__item gallery__item-4"></div>
-        </div>
-
-        <div class="slider swiper">
-          <div class="slider__wrap swiper-wrapper">
-            <div class="slider__slide slider__slide-1 swiper-slide"></div>
-
-            <div class="slider__slide slider__slide-2 swiper-slide"></div>
-
-            <div class="slider__slide slider__slide-3 swiper-slide"></div>
-
-            <div class="slider__slide slider__slide-4 swiper-slide"></div>
+        <div class="container">
+          <h2 class="gallery__tittle">Галерея</h2>
+          <div class="gallery__content">
+            <div class="gallery__item gallery__item-1"></div>
+            <div class="gallery__item gallery__item-2"></div>
+            <div class="gallery__item gallery__item-3"></div>
+            <div class="gallery__item gallery__item-4"></div>
           </div>
-
-          <div class="slider__pagination swiper-pagination"></div>
-
+          <div class="slider swiper">
+            <div class="slider__wrap swiper-wrapper">
+              <div class="slider__slide slider__slide-1 swiper-slide"></div>
+              <div class="slider__slide slider__slide-2 swiper-slide"></div>
+              <div class="slider__slide slider__slide-3 swiper-slide"></div>
+              <div class="slider__slide slider__slide-4 swiper-slide"></div>
+            </div>
+            <div class="slider__pagination swiper-pagination"></div>
+          </div>
         </div>
       </section>
 
       <section class="page__section subscribe" id="subscribe">
+        <h2 class="subscribe__tittle">
+          Підписка
+        </h2>
+
+        <p class="subscribe__paragraph">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form action="post" class="subscribe__form"></form>
+      </section>
+
+      <section class="page__section contacts" id="contacts">
 
       </section>
     </main>
 
-    <footer class="contacts">
+    <footer class="footer">
 
     </footer>
 
