--- a/src/index.html
+++ b/src/index.html
@@ -230,12 +230,14 @@
 
           <div class="subscription__info">
             <form
+              onsubmit="this.reset(); return false;"
+              method="get"
               action="/"
               class="subscription__form"
-              method="get"
               >
               <input
                 type="email"
+                name="email"
                 class="subscription__item"
                 placeholder="E-mail"
                 required
@@ -283,8 +285,8 @@
               <li><strong>11:00 — 19:00</strong> неділя</li>
             </ul>
 
-            <p class="footer__description">
-              <span class="footer__description--weekend">
+            <p class="footer__weekend">
+              <span class="footer__weekend-day">
                 <strong>Вихідні:</strong>
               </span>
               понеділок, вівторок<br>
