--- a/src/index.html
+++ b/src/index.html
@@ -238,6 +238,7 @@
               <input
                 type="email"
                 name="email"
+                id="email"
                 class="subscription__item"
                 placeholder="E-mail"
                 required
@@ -306,7 +307,7 @@
                 вул. М. Грушевського, 6; <br> Київ, 01001 <br>
             </a>
             <a
-              href="tel: +38 (044) 278-13-57"
+              href="tel: +380442781357"
               target="_blank"
               class="footer__description">
                 тел. +38 (044) 278-13-57 <br>
