--- a/src/index.html
+++ b/src/index.html
@@ -313,7 +313,7 @@
                 тел. +38 (044) 278-13-57 <br>
             </a>
             <a
-              href="tel: +38 (044) 278-74-54"
+              href="tel: +380442787454"
               target="_blank"
               class="footer__description">
                 факс +38 (044) <br> 278-74-54 <br>
