--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                   події
                 </a>
               </li>
-              
+
               <li class="menu__item">
                 <a href="#contacts" class="menu__link">
                   Контакти
@@ -169,7 +169,9 @@
                 </div>
               </div>
               <h3 class="exhibition__tittle">
-                Йду і повертаюсь
+                <a href="#" class="exhibition__link">
+                  Йду і повертаюсь
+                </a>
               </h3>
               <div class="exhibition__description">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -198,7 +200,9 @@
                 </div>
               </div>
               <h3 class="exhibition__tittle">
-                І спогади і мрії
+                <a href="#" class="exhibition__link">
+                  І спогади і мрії
+                </a>
               </h3>
               <div class="exhibition__description">
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
@@ -256,7 +260,26 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <form action="post" class="subscribe__form"></form>
+        <form
+          action="#"
+          class="subscribe__form form"
+          method="post"
+        >
+          <input
+            type="email"
+            class="form__input"
+            placeholder="E-mail"
+            required
+          >
+
+          <input
+                type="submit"
+                value="&#10095;"
+                onclick="this.form.reset();"
+                class="button form__button"
+                autocomplete="off"
+              >
+        </form>
       </section>
 
       <section class="page__section contacts" id="contacts">
