add footer layout

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
               <div class="menu__days-off">
                 <strong>Вихідні:</strong> понеділок,вівторок
                 <br>
-                Каса припиняє роботу за 1 годину дозакриття музею
+                Каса припиняє роботу за 1 годину до закриття музею.
               </div>
             </div>
           </div>
@@ -281,14 +281,99 @@
               >
         </form>
       </section>
-
-      <section class="page__section contacts" id="contacts">
-
-      </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content grid">
+          <div
+            class="
+              footer__social
+              grid__item--mobile-1-2
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1
+              ">
+            <a href="#" class="footer__logo logo logo--footer">
+              na
+              <br>
+              mu
+            </a>
+            <div class="footer__social-links">
+              <a href="#" class="footer__facebook"></a>
+              <a href="#" class="footer__inst"></a>
+            </div>
+          </div>
 
+          <div
+            class="
+              footer__shedule
+              grid__item--mobile-1-1
+              grid__item--tablet-2-3
+              grid__item--desktop-3-4
+            ">
+            <h4 class="footer__shedule-tittle">
+              Графік роботи
+            </h4>
+            <div class="footer__shedule-content">
+              <ul class="footer__open-days">
+                <li class="footer__shedule-day">
+                  <strong>12:00 — 20:00</strong> середа
+                </li>
+                <li class="footer__shedule-day">
+                  <strong>12:00 — 20:00</strong> четвер
+                </li>
+                <li class="footer__shedule-day">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </li>
+                <li class="footer__shedule-day">
+                  <strong>11:00 — 19:00</strong> субота
+                </li>
+                <li class="footer__shedule-day">
+                  <strong>11:00 — 19:00</strong> неділя
+                </li>
+              </ul>
+              <div class="footer__days-off">
+                Вихідні: понеділок,вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до закриття музею.
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="
+              footer__contacts
+              grid__item--mobile-2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-5-6
+            ">
+            <h4 class="footer__contacts-tittle">
+              Контакти:
+            </h4>
+
+            <a
+              href="https://goo.gl/maps/tUZRs5fzVABck9ds7"
+              target="_blank"
+              class="footer__contacts-item"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a href="tel:+38 (044) 278-13-57" class="footer__contacts-item">
+              тел. +38 (044) 278-13-57
+            </a>
+
+            <a href="tel:+38 (044) 278-74-54" class="footer__contacts-item">
+               факс +38 (044) 278-74-54
+            </a>
+
+            <a href="mailto:info@namu.kiev.ua" class="footer__contacts-item">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+        </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
