add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -227,17 +227,20 @@
               <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
             </div>
             <div class="subscribe__btn">
-              <input
-                class="subscribe__input"
-                type="email"
-                placeholder="E-mail"
-                minlength="10"
-              >
-              <input
-                class="subscribe__button"
-                type="submit"
-                value="."
-              >
+              <form action="post">
+                <input
+                  class="subscribe__input"
+                  type="email"
+                  placeholder="E-mail"
+                  minlength="10"
+                  id="email"
+                >
+                <input
+                  class="subscribe__button"
+                  type="submit"
+                  value="."
+                >
+              </form>
             </div>
           </div>
         </div>
