implement header and side menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,126 @@
+  <!-- #region head -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="./images/png_images/nuseum_logo.png"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin ="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin ="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__icons header__icons--state--">
+            <a href="#menu" class="icon icon--menu"></a>
+          </div>
+          <a href="#" class="header__logo-link logo">
+            na<br>mu
+          </a>
+          <img
+            class="header__background"
+            src="./images/png_images/museum_front.png"
+            alt="museum"
+          >
+          <h1 class="header__title header-1">
+            художній музей
+          </h1>
+          <div class="header__button button button--aling--left">
+            <a href="#tickets" class="button__link">
+              <span class="text-normal button__link__text">квитки</span>
+              <div class="button__link__icon icon icon--arrow"></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </header>
+    <!-- #endregion -->
+
+    <!-- #region menu -->
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="container">
+
+          <div class="menu__content">
+            <div class="menu__top">
+              <a href="#" class="icon icon--close"></a>
+              <nav class="nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#shop" class="nav__link text-normal-semibold">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contact" class="nav__link text-normal-semibold">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#about" class="nav__link text-normal-semibold">Виставки та<br> події</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#about" class="nav__link text-normal-semibold">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="menu__bottom">
+              <p class="text-normal menu__bottom__item">
+                Графік роботи
+              </p>
+              <ul class="menu__schedule">
+                <li class="schedule__item text-normal">
+                  <span class="text-normal-bold">12:00 — 20:00</span> середа
+                </li>
+                <li class="schedule__item text-normal">
+                  <span class="text-normal-bold">12:00 — 20:00</span> четвер
+                </li>
+                <li class="schedule__item text-normal">
+                  <span class="text-normal-bold">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li class="schedule__item text-normal">
+                  <span class="text-normal-bold">11:00 — 19:00</span> субота
+                </li>
+                <li class="schedule__item text-normal">
+                  <span class="text-normal-bold">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+              <p class="text-normal menu__bottom__vacation">
+                <span class="text-normal-bold">Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <!-- #region main -->
+    <main class="main">
+
+    </main>
+    <!-- #endregion -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
