--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Art Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link
       rel="shortcut icon"
