add js animation to menu button

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,14 @@
       <div class="container">
         <div class="header__content">
           <div class="header__icons header__icons--state--">
-            <a href="#menu" class="icon icon--menu"></a>
+            <!-- <a href="#menu" class="icon icon--menu"></a> -->
+            <a href="#menu">
+              <div class="icon nav-icon">
+                <span class="nav-icon__line nav-icon__line--order--1"></span>
+                <span class="nav-icon__line nav-icon__line--order--2"></span>
+                <span class="nav-icon__line nav-icon__line--order--3"></span>
+              </div>
+            </a>
           </div>
           <a href="#" class="header__logo-link logo">
             na<br>mu
@@ -47,7 +54,7 @@
           <h1 class="header__title header-1">
             художній музей
           </h1>
-          <div class="header__button button button--aling--left">
+          <div class="header__button button">
             <a href="#tickets" class="button__link">
               <span class="text-normal button__link__text">квитки</span>
               <div class="button__link__icon icon icon--arrow"></div>
@@ -66,7 +73,14 @@
 
           <div class="menu__content">
             <div class="menu__top">
-              <a href="#" class="icon icon--close"></a>
+              <!-- <a href="#" class="icon icon--close"></a> -->
+              <a href="#">
+                <div class="icon nav-icon">
+                  <span class="nav-icon__line nav-icon__line--order--1"></span>
+                  <span class="nav-icon__line nav-icon__line--order--2"></span>
+                  <span class="nav-icon__line nav-icon__line--order--3"></span>
+                </div>
+              </a>
               <nav class="nav">
                 <ul class="nav__list">
                   <li class="nav__item">
@@ -118,7 +132,6 @@
     <!-- #endregion -->
     <!-- #region main -->
     <main class="main">
-
     </main>
     <!-- #endregion -->
     <script type="text/javascript" src="scripts/main.js"></script>
