--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Museum</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/style.scss">
     <link
       rel="shortcut icon"
       href="./images/png_images/nuseum_logo.png"
@@ -34,7 +34,6 @@
       <div class="container">
         <div class="header__content">
           <div class="header__icons header__icons--state--">
-            <!-- <a href="#menu" class="icon icon--menu"></a> -->
             <a href="#menu">
               <div class="icon nav-icon">
                 <span class="nav-icon__line nav-icon__line--order--1"></span>
@@ -65,7 +64,6 @@
     </div>
     </header>
     <!-- #endregion -->
-
     <!-- #region menu -->
     <aside class="menu page__menu" id="menu">
       <div class="menu__wrapper">
@@ -84,16 +82,16 @@
               <nav class="nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a href="#shop" class="nav__link text-normal-semibold">Галерея</a>
+                    <a href="#gallery" class="nav__link text-normal-semibold">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#contact" class="nav__link text-normal-semibold">Про Нас</a>
+                    <a href="#about" class="nav__link text-normal-semibold">Про Нас</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#about" class="nav__link text-normal-semibold">Виставки та<br> події</a>
+                    <a href="#events" class="nav__link text-normal-semibold">Виставки та<br> події</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#about" class="nav__link text-normal-semibold">Контакти</a>
+                    <a href="#contacts" class="nav__link text-normal-semibold">Контакти</a>
                   </li>
                 </ul>
               </nav>
@@ -132,6 +130,79 @@
     <!-- #endregion -->
     <!-- #region main -->
     <main class="main">
+      <div class="container">
+        <!-- #region events -->
+        <section class="events">
+          <h2 class="events__header header-2" id="events">
+            Актуальні події
+          </h2>
+          <article class="event">
+            <div class="event__image-container">
+              <img
+                src="./images/png_images/two_trees.png"
+                alt="two two_trees"
+                class="event__image"
+              >
+            </div>
+            <div class="event__date">
+              <div class="event__date__title text-normal-semibold">виставка</div>
+              <div class="event__date__value text-hard-bold">26.08-29.11.2019</div>
+            </div>
+            <div class="
+              event__title
+              header-3
+              event__title--type--gallery"
+            >
+              Йду і повертаюсь
+            </div>
+            <div class="event__description text-tiny">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </article>
+          <article class="event">
+            <div class="event__image-container">
+              <img
+                src="./images/png_images/girl_n_peafowl.png"
+                alt="girl and peafowl"
+                class="event__image"
+              >
+            </div>
+            <div class="event__date">
+              <div class="event__date__title text-normal-semibold">виставка</div>
+              <div class="event__date__value text-hard-bold">26.08-29.11.2019</div>
+            </div>
+            <div class="
+              event__title
+              header-3
+              event__title--type--gallery
+            ">
+              І спогади і мрії
+            </div>
+            <div class="event__description text-tiny">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </article>
+          <article class="event event--type--lecture">
+            <div class="event__image-container event__image-container--type--lecture">
+              <img
+                src="./images/png_images/sunset.png"
+                alt="sunset"
+                class="event__image event__image--type--lecture"
+              >
+            </div>
+            <div class="event__info-wrapper">
+              <div class="event__date event__date--type--lecture">
+                <div class="event__date__title text-normal-semibold">лекція</div>
+                <div class="event__date__value text-hard-bold">26/08/2019 - 11:00</div>
+              </div>
+              <div class="event__title header-3">
+                Від класицизму до романтизму
+              </div>
+            </div>
+          </article>
+        </section>
+        <!-- #endregion -->
+      </div>
     </main>
     <!-- #endregion -->
     <script type="text/javascript" src="scripts/main.js"></script>
