--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,237 @@
+<!-- #region head -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+  <body class="page__body" id="home">
+    <header class="page__header header">
+      <div class="container container--header">
+        <div class="header__top">
+          <div class="icon">
+            <a href="#menu" class="icon__link"></a>
+          </div>
+
+          <div class="logo">
+            <a href="#home" class="logo__link">
+              NA <br> MU
+            </a>
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <h1 class="header__title">Художній музей</h1>
+
+          <div class="header__order-tickets">
+            <div class="header__tickets">Квитки</div>
+            <a href="#" class="header__order"></a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="nav" id="menu">
+      <div class="container container--nav">
+        <nav class="nav__menu">
+          <div class="nav__menu-list">
+            <a href="#home" class="nav__cross"></a>
+            <div class="nav__menu-part">
+              <a href="#gallery" class="nav__menu-link">Галерея</a>
+              <a href="#events" class="nav__menu-link">Виставки та події</a>
+            </div>
+            <div class="nav__menu-part">
+              <a href="#about" class="nav__menu-link">Про нас</a>
+              <a href="#contacts" class="nav__menu-link">Контакти</a>
+            </div>
+          </div>
+        </nav>
+
+        <div class="nav__schedule schedule">
+          <h3 class="schedule__title">Графік роботи</h3>
+
+          <ul class="schedule__list">
+            <li class="schedule__day">
+              <strong>12:00 — 20:00</strong> середа
+            </li>
+            <li class="schedule__day">
+              <strong>12:00 — 20:00</strong> четвер
+            </li>
+            <li class="schedule__day">
+              <strong>12:00 — 20:00</strong> п’ятниця
+            </li>
+            <li class="schedule__day">
+              <strong>11:00 — 19:00</strong> субота
+            </li>
+            <li class="schedule__day">
+              <strong>11:00 — 19:00</strong> неділя
+            </li>
+          </ul>
+
+          <div class="schedule__weekend">
+            <strong>Вихідні</strong>: понеділок, вівторок
+            <br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main>
+      <div class="container container--events">
+        <section class="events" id="events">
+          <h2 class="events__title title">Актуальні події</h2>
+
+          <article class="events__event">
+            <div class="events__image-container">
+              <img
+                src="images/events/image_1.png"
+                alt="picture"
+                class="events__image"
+              >
+            </div>
+
+            <div class="events__start">
+              <span class="events__what">Виставка</span>
+              <span class="events__when">26.08-29.11.2019</span>
+            </div>
+
+            <h3 class="events__name">
+              Йду і повертаюсь
+              <span class="events__square"></span>
+            </h3>
+
+            <p class="events__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </article>
+
+          <article class="events__event">
+            <div class="events__image-container">
+              <img
+                src="images/events/image_2.png"
+                alt="picture"
+                class="events__image"
+              >
+            </div>
+
+            <div class="events__start">
+              <span class="events__what">Виставка</span>
+              <span class="events__when">26.08-29.11.2019</span>
+            </div>
+
+            <h3 class="events__name">
+              І спогади і мрії
+              <span class="events__square"></span>
+            </h3>
+
+            <p class="events__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </article>
+        </section>
+      </div>
+
+      <div class="event-lecture event-lecture--margin-bottom">
+        <div class="event-lecture__image-container">
+          <img
+            src="images/events/image_3.png"
+            alt="picture"
+            class="event-lecture__image"
+          >
+        </div>
+
+        <div class="event-lecture__poster">
+          <div class="event-lecture__start">
+            <span class="event-lecture__what">Лекція</span>
+            <span class="event-lecture__when">26/08/2019 - 11:00</span>
+          </div>
+
+          <h3 class="event-lecture__name">
+            Від класицизму до
+            <br>
+            романтизму
+          </h3>
+        </div>
+      </div>
+
+      <div class="container">
+        <section class="gallery gallery--margin-bottom" id="gallery">
+          <h2 class="gallery__title title">Галерея</h2>
+
+          <div class="slider">
+            <div class="slider__box">
+              <div class="slider__picture-box">
+                <img
+                  src="images/gallery/picture1.png"
+                  alt="picture"
+                  class="slider__picture"
+                >
+              </div>
+
+              <div class="slider__picture-box slider__picture-box--hidden">
+                <img
+                  src="images/gallery/picture2.png"
+                  alt="picture"
+                  class="slider__picture"
+                >
+              </div>
+
+              <div class="slider__scroll"></div>
+            </div>
+          </div>
+
+          <div class="gallery__content">
+            <div class="gallery__picture-box gallery__picture-box--box1">
+              <img
+                src="images/gallery/picture1.png"
+                alt="picture"
+                class="gallery__picture"
+              >
+            </div>
+
+            <div class="gallery__picture-box gallery__picture-box--box2">
+              <img
+                src="images/gallery/picture3.png"
+                alt="picture"
+                class="gallery__picture"
+              >
+            </div>
+
+            <div class="gallery__picture-box gallery__picture-box--box3">
+              <img
+                src="images/gallery/picture4.png"
+                alt="picture"
+                class="gallery__picture"
+              >
+            </div>
+
+            <div class="gallery__picture-box gallery__picture-box--box4">
+              <img
+                src="images/gallery/picture5.png"
+                alt="picture"
+                class="gallery__picture"
+              >
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="subscription">
+        <h2 class="subscription__title title">Підписка</h2>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts"></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
