--- a/src/index.html
+++ b/src/index.html
@@ -213,19 +213,21 @@
 
         <div class="events__lecture lecture">
           <div class="lecture__content">
-            <div class="lecture__caption">
-              <div class="lecture__caption-tittle">
-                лекція
+            <a href="#" class="lecture__link">
+              <div class="lecture__caption">
+                <div class="lecture__caption-tittle">
+                  лекція
+                </div>
+
+                <div class="lecture__date">
+                  26/08/2019 - 11:00
+                </div>
               </div>
 
-              <div class="lecture__date">
-                26/08/2019 - 11:00
-              </div>
-            </div>
-
-            <h3 class="lecture__tittle">
-              Від класицизму до романтизму
-            </h3>
+              <h3 class="lecture__tittle">
+                Від класицизму до романтизму
+              </h3>
+            </a>
           </div>
         </div>
       </section>
@@ -372,6 +374,58 @@
             </a>
           </div>
 
+          <a href="gotop" class="footer__go-top grid__item--mobile-2-2">
+            <img
+              src="./images/icons/arrow-up.svg" alt="Вверх"
+              class="footer__go-top-image"
+            >
+          </a>
+
+          <div
+            class="
+              footer__splitter
+              grid__item--mobile-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-7-7
+              "
+          ></div>
+
+          <div
+            class="
+              footer__nav
+              grid__item--mobile-1-2
+              grid__item--tablet-2-4
+              grid__item--desktop-8-11
+          ">
+            <a href="#gallery" class="footer__link">
+              Галерея
+            </a>
+            <a href="#subscribe" class="footer__link">
+              Про Нас
+            </a>
+            <a href="#events" class="footer__link">
+              Виставки та події
+            </a>
+            <a href="#contacts" class="footer__link">
+              Контакти
+            </a>
+          </div>
+
+          <div
+            class="
+              footer__signs
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-12
+          ">
+            <p class="footer__author">
+              Designed by Zhyriada Marina
+            </p>
+
+            <p class="footer__copyright">
+              Copyright &#169; 2019. All Rights Reserved.
+            </p>
+          </div>
         </div>
       </div>
     </footer>
