fix go top footer button

--- a/src/index.html
+++ b/src/index.html
@@ -374,7 +374,7 @@
             </a>
           </div>
 
-          <a href="gotop" class="footer__go-top grid__item--mobile-2-2">
+          <a href="#" class="footer__go-top grid__item--mobile-2-2">
             <img
               src="./images/icons/arrow-up.svg" alt="Вверх"
               class="footer__go-top-image"
