add hover effects and actual links for social

--- a/src/index.html
+++ b/src/index.html
@@ -301,8 +301,16 @@
               mu
             </a>
             <div class="footer__social-links">
-              <a href="#" class="footer__facebook"></a>
-              <a href="#" class="footer__inst"></a>
+              <a
+                href="https://www.facebook.com/namu.museum"
+                class="footer__facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="footer__inst"
+                target="_blank"
+              ></a>
             </div>
           </div>
 
