fixed code and add blocks

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
         <div class="header__bottom">
           <h1 class="header__title">Художній музей</h1>
 
-          <div class="header__order-tickets">
+          <a href="#" class="header__order-tickets">
             <div class="header__tickets">Квитки</div>
-            <a href="#" class="header__order"></a>
-          </div>
+            <span class="header__order"></span>
+          </a>
         </div>
       </div>
     </header>
@@ -226,12 +226,142 @@
         </section>
       </div>
 
-      <section class="subscription">
-        <h2 class="subscription__title title">Підписка</h2>
+      <section class="subscription subscription--margin-bottom">
+        <div class="container container--subscription">
+          <h2 class="subscription__title title">Підписка</h2>
+
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            action="#"
+            method="post"
+            class="subscription__form"
+          >
+            <input
+              type="email"
+              name="email"
+              class="subscription__email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button type="submit" class="subscription__submit"></button>
+          </form>
+        </div>
       </section>
     </main>
 
-    <footer class="footer" id="contacts"></footer>
+    <footer class="footer" id="contacts">
+      <div class="container container--footer">
+        <div class="footer__top">
+          <div class="footer__top-logo">
+            <a href="#home" class="footer__top-link">
+              NA <br> MU
+            </a>
+          </div>
+
+          <div class="footer__top-social">
+            <a
+              href="https://uk-ua.facebook.com/"
+              class="footer__facebook"
+              target="_blank"
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              class="footer__instagram"
+              target="_blank"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__info">
+          <div class="footer__info-block-1">
+            <div class="footer__schedule timetable">
+              <h3 class="timetable__title">Графік роботи</h3>
+
+              <ul class="timetable__list">
+                <li class="timetable__day">
+                  <strong>12:00 — 20:00</strong> середа
+                </li>
+                <li class="timetable__day">
+                  <strong>12:00 — 20:00</strong> четвер
+                </li>
+                <li class="timetable__day">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </li>
+                <li class="timetable__day">
+                  <strong>11:00 — 19:00</strong> субота
+                </li>
+                <li class="timetable__day">
+                  <strong>11:00 — 19:00</strong> неділя
+                </li>
+              </ul>
+
+              <div class="timetable__weekend">
+                Вихідні: понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </div>
+            </div>
+
+            <div class="footer__info-contacts">
+              <div class="footer__info-contacts-name">Контакти:</div>
+
+              <div class="footer__contacts">
+                <a
+                  href="https://goo.gl/maps/8ECKZaozX3ZxoGvw9"
+                  class="footer__info-address"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+
+                <a href="tel: +38 (044) 278-13-57" class="footer__info-tel">
+                  тел. +38 (044) 278-13-57
+                </a>
+
+                <a href="fax: +38 (044) 278-74-54" class="footer__info-fax">
+                  факс +38 (044) 278-74-54
+                </a>
+
+                <a href="mailto: info@namu.kiev.ua" class="footer__info-email">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+
+              <a href="#home" class="footer__info-cercle"></a>
+            </div>
+          </div>
+
+          <div class="footer__info-block-2">
+            <nav class="footer__nav">
+              <div class="footer__nav-left">
+                <a href="#gallery" class="footer__nav-link">Галерея</a>
+                <a href="#events" class="footer__nav-link">Виставки та події</a>
+              </div>
+
+              <div class="footer__nav-right">
+                <a href="#about" class="footer__nav-link">Про Нас</a>
+                <a href="#contacts" class="footer__nav-link">Контакти</a>
+              </div>
+            </nav>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <div class="footer__rights">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+
+          <div class="footer__design">
+            Designed by Zhyriada Marina
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
