fix header menu indents

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
         <div class="header__tickets">
           <h1 class="header__page-tittle">
             художній
-            
+
             музей
           </h1>
 
@@ -62,22 +62,20 @@
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="menu__content">
-        <div class="menu__blocks">
-          <div class="container">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__blocks">
             <ul class="menu__list">
               <li class="menu__item">
                 <a href="#gallery" class="menu__link">
                   Галерея
                 </a>
               </li>
-
               <li class="menu__item">
                 <a href="#subscribe" class="menu__link">
                   Про Нас
                 </a>
               </li>
-
               <li class="menu__item">
                 <a href="#events" class="menu__link">
                   Виставки та
@@ -85,49 +83,48 @@
                   події
                 </a>
               </li>
-
               <li class="menu__item">
                 <a href="#contacts" class="menu__link">
                   Контакти
                 </a>
               </li>
             </ul>
-          </div>
 
-          <div class="menu__splitter">
-          </div>
+            <div class="menu__splitter"></div>
 
-          <div class="menu__shedule">
-            <h4 class="menu__shedule-tittle">
-              Графік роботи
-            </h4>
+            <div class="menu__shedule">
+              <h4 class="menu__shedule-tittle">
+                Графік роботи
+              </h4>
 
-            <div class="menu__shedule-content">
-              <ul class="menu__open-days">
-                <li class="menu__shedule-day">
-                  <strong>12:00 — 20:00</strong> середа
-                </li>
+              <div class="menu__shedule-content">
+                <ul class="menu__open-days">
+                  <li class="menu__shedule-day">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
 
-                <li class="menu__shedule-day">
-                  <strong>12:00 — 20:00</strong> четвер
-                </li>
+                  <li class="menu__shedule-day">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
 
-                <li class="menu__shedule-day">
-                  <strong>12:00 — 20:00</strong> п’ятниця
-                </li>
+                  <li class="menu__shedule-day">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
 
-                <li class="menu__shedule-day">
-                  <strong>11:00 — 19:00</strong> субота
-                </li>
+                  <li class="menu__shedule-day">
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
 
-                <li class="menu__shedule-day">
-                  <strong>11:00 — 19:00</strong> неділя
-                </li>
-              </ul>
-              <div class="menu__days-off">
-                <strong>Вихідні:</strong> понеділок,вівторок
-                <br>
-                Каса припиняє роботу за 1 годину до закриття музею.
+                  <li class="menu__shedule-day">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+
+                <div class="menu__days-off">
+                  <strong>Вихідні:</strong> понеділок,вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею.
+                </div>
               </div>
             </div>
           </div>
