--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/favicon.jpg\">
   </head>
   <!-- #endregion -->
   <body class="page__body" id="home">
@@ -318,11 +319,11 @@
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
 
-                <a href="tel: +38 (044) 278-13-57" class="footer__info-tel">
+                <a href="tel: +380442781357" class="footer__info-tel">
                   тел. +38 (044) 278-13-57
                 </a>
 
-                <a href="fax: +38 (044) 278-74-54" class="footer__info-fax">
+                <a href="fax: +380442787454" class="footer__info-fax">
                   факс +38 (044) 278-74-54
                 </a>
 
