--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,11 @@
             <a href="#home" class="nav__cross"></a>
             <div class="nav__menu-part">
               <a href="#gallery" class="nav__menu-link">Галерея</a>
-              <a href="#events" class="nav__menu-link">Виставки та події</a>
+              <a href="#events" class="nav__menu-link">
+                Виставки
+                <br>
+                та події
+              </a>
             </div>
             <div class="nav__menu-part">
               <a href="#about" class="nav__menu-link">Про нас</a>
