add mobile/tablet version of galery block

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Museum</title>
     <link rel="stylesheet" href="./styles/style.scss">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/> -->
     <link
       rel="shortcut icon"
       href="./images/png_images/nuseum_logo.png"
@@ -202,9 +203,52 @@
           </article>
         </section>
         <!-- #endregion -->
+        <!-- #region slider -->
+        <section class="slider">
+          <h2 class="header-2 slider__header">Галерея</h2>
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img
+                  src="./images/png_images/girl.png"
+                  alt="girl"
+                  class="slide-image"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/png_images/gooses.png"
+                  alt="gooses"
+                  class="slide-image"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/png_images/winter.png"
+                  alt="winter"
+                  class="slide-image"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/png_images/sea.png"
+                  alt="sea"
+                  class="slide-image"
+                >
+              </div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </section>
+        <!-- #endregion -->
       </div>
     </main>
     <!-- #endregion -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
+
   </body>
 </html>
