add desktop layout for gallery block

--- a/src/index.html
+++ b/src/index.html
@@ -204,43 +204,32 @@
         </section>
         <!-- #endregion -->
         <!-- #region slider -->
-        <section class="slider">
-          <h2 class="header-2 slider__header">Галерея</h2>
-          <div class="swiper">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <img
-                  src="./images/png_images/girl.png"
-                  alt="girl"
-                  class="slide-image"
-                >
+        <section class="gallery">
+          <h2 class="header-2 gallery__header">Галерея</h2>
+          <div class="gallery__wrapper">
+            <div class="swiper">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <div class="slide-image slide-image--bg--1 "></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slide-image slide-image--bg--2 "></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slide-image slide-image--bg--3 "></div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slide-image slide-image--bg--4 "></div>
+                </div>
               </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/png_images/gooses.png"
-                  alt="gooses"
-                  class="slide-image"
-                >
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/png_images/winter.png"
-                  alt="winter"
-                  class="slide-image"
-                >
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/png_images/sea.png"
-                  alt="sea"
-                  class="slide-image"
-                >
-              </div>
+              <div class="swiper-pagination"></div>
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+            <div class="slide-image slide-image--bg--1 slide-image--layout--square"></div>
+            <div class="slide-image slide-image--bg--2 slide-image--layout--rectangle"></div>
+            <div class="slide-image slide-image--bg--3 slide-image--layout--rectangle"></div>
+            <div class="slide-image slide-image--bg--4 slide-image--layout--square"></div>
           </div>
         </section>
         <!-- #endregion -->
