--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
               alt="Йду і повертаюсь"
               class="exhibition__img grid__item--desktop-1-7"
             >
-            <div class="exhibition__content grid__item--desktop-8-12">
+            <div class="exhibition__content grid__item--desktop-9-12">
               <div class="exhibition__caption">
                 <div class="exhibition__caption-tittle">
                   виставка
@@ -187,7 +187,7 @@
               alt="І спогади і мрії"
               class="exhibition__img grid__item--desktop-1-7"
             >
-            <div class="exhibition__content grid__item--desktop-8-12">
+            <div class="exhibition__content grid__item--desktop-9-12">
               <div class="exhibition__caption">
                 <div class="exhibition__caption-tittle">
                   виставка
@@ -263,6 +263,7 @@
           action="#"
           class="subscribe__form form"
           method="post"
+          id="form-reload"
         >
           <input
             type="email"
@@ -274,7 +275,6 @@
           <input
                 type="submit"
                 value="&#10095;"
-                onclick="this.form.reset();"
                 class="button form__button"
                 autocomplete="off"
               >
