--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
   <body class="page__body">
     <!-- #region header -->
-    <header class="header">
+    <header class="header" id="home">
       <div class="container">
         <div class="header__content">
           <div class="header__icons header__icons--state--">
@@ -60,6 +60,8 @@
               <div class="button__link__icon icon icon--arrow"></div>
             </a>
           </div>
+          <span class="header__side-text text-normal-bold color--dark-grey">події</span>
+
         </div>
       </div>
     </div>
@@ -83,16 +85,32 @@
               <nav class="nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a href="#gallery" class="nav__link text-normal-semibold">Галерея</a>
+                    <a href="#gallery" class="
+                      nav__link
+                      text-normal-semibold
+                      color--white
+                    ">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#about" class="nav__link text-normal-semibold">Про Нас</a>
+                    <a href="#about" class="
+                      nav__link
+                      text-normal-semibold
+                      color--white
+                    ">Про Нас</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#events" class="nav__link text-normal-semibold">Виставки та<br> події</a>
+                    <a href="#events" class="
+                      nav__link
+                      text-normal-semibold
+                      color--white
+                    ">Виставки та<br> події</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#contacts" class="nav__link text-normal-semibold">Контакти</a>
+                    <a href="#contacts" class="
+                      nav__link
+                      text-normal-semibold
+                      color--white
+                    ">Контакти</a>
                   </li>
                 </ul>
               </nav>
@@ -196,7 +214,11 @@
                 <div class="event__date__title text-normal-semibold">лекція</div>
                 <div class="event__date__value text-hard-bold">26/08/2019 - 11:00</div>
               </div>
-              <div class="event__title header-3">
+              <div class="
+                event__title
+                event__title--type--lecture
+                header-3
+              ">
                 Від класицизму до романтизму
               </div>
             </div>
@@ -204,7 +226,7 @@
         </section>
         <!-- #endregion -->
         <!-- #region slider -->
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h2 class="header-2 gallery__header">Галерея</h2>
           <div class="gallery__wrapper">
             <div class="swiper">
@@ -234,7 +256,7 @@
         </section>
         <!-- #endregion -->
         <!-- #region subscribe -->
-        <section class="subscribe">
+        <section class="subscribe" id="about">
           <h1 class="header-2 subscribe__header">Підписка</h1>
           <h4 class="header-4 subscribe__header">Бути в курсі всіх актуальних подій та останніх новин.</h4>
           <div class="subscribe__form">
@@ -268,6 +290,151 @@
         <!-- #endregion -->
       </div>
     </main>
+    <!-- #endregion -->
+    <!-- #region footer -->
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content">
+          <a href="#home" class="footer__logo-link logo">
+            na<br>mu
+          </a>
+
+          <!-- icons -->
+          <ul class="footer__list footer__list--socials">
+            <li class="footer__list__item">
+              <a href="https://www.facebook.com/witch.of.mountain.winds" class="icon icon--facebook"></a>
+            </li>
+            <li class="footer__list__item">
+              <a href="https://www.instagram.com/witch_of_mountain_winds/" class="icon icon--instagram"></a>
+            </li>
+          </ul>
+
+          <ul class="footer__list footer__list--schedule">
+            <li class="
+              schedule__item
+              footer__list__header
+              text-normal
+            ">
+              Графік роботи
+            </li>
+            <li class="schedule__item text-normal">
+              <span class="text-normal-bold">12:00 — 20:00</span> середа
+            </li>
+            <li class="schedule__item text-normal">
+              <span class="text-normal-bold">12:00 — 20:00</span> четвер
+            </li>
+            <li class="schedule__item text-normal">
+              <span class="text-normal-bold">12:00 — 20:00</span> п’ятниця
+            </li>
+            <li class="schedule__item text-normal">
+              <span class="text-normal-bold">11:00 — 19:00</span> субота
+            </li>
+            <li class="schedule__item text-normal">
+              <span class="text-normal-bold">11:00 — 19:00</span> неділя
+            </li>
+            <p class="text-normal footer__vacation">
+              Вихідні: понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </ul>
+
+          <ul class="footer__list footer__list--contacts">
+            <li class="footer__list__item footer__list__header">
+              <span class="text-normal">Контакти:</span>
+            </li>
+            <li class="footer__list__item ">
+              <a class="
+                footer__link
+                text-normal
+                color--black
+              " href="https://goo.gl/maps/Dodv9GL3bjoFouAb9">вул. М. Грушевського, 6; Київ, 01001</a>
+            </li>
+            <li class="footer__list__item ">
+              <a class="
+                footer__link
+                text-normal
+                color--black
+              " href="tel:+380934476839">тел. +38 (044) 278-13-57</a>
+            </li>
+            <li class="footer__list__item ">
+              <a class="
+                footer__link
+                text-normal
+                color--black
+              " href="tel:+380934476839">факс +38 (044) 278-74-54</a>
+            </li>
+            <li class="footer__list__item ">
+              <a class="
+                footer__link
+                text-normal
+                color--black
+              " href="mailto:support.mountain@gmail.com">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </li>
+          </ul>
+
+          <div class="
+            footer__button-go-up
+          ">
+            <a href="#home" class="
+              icon
+              button__link--type--up
+              icon--arrow--type--up
+            "></a>
+          </div>
+
+          <nav class="nav footer__list--nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="
+                    nav__link
+                    nav__link--highlight--black
+                    text-normal
+                    color--black
+                  ">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#about" class="
+                nav__link
+                nav__link--highlight--black
+                text-normal
+                color--black
+              ">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="
+                color--black
+                nav__link
+                nav__link--highlight--black
+                text-normal
+                ">Виставки та<br> події</a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="
+                color--black
+                nav__link
+                nav__link--highlight--black
+                text-normal
+              ">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <h4 class="footer__bottom-text text-tiny">
+            Designed by Zhyriada Marina
+          </h4>
+          <h4 class="footer__bottom-text text-tiny">
+            Copyright © 2019. All Rights Reserved.
+          </h4>
+        </div>
+      </div>
+    </footer>
     <!-- #endregion -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
