add hover effect to submit

--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,8 @@
                 type="email"
                 class="
                   subscribe__input__field
-                  subscribe__input__field--type--email"
+                  subscribe__input__field--type--email
+                "
                 placeholder="E-mail"
                 autocomplete="email"
                 id="email"
@@ -276,6 +277,7 @@
                 type="submit"
                 class="
                   subscribe__input__field
+                  subscribe__input__field--type--submit
                   button
                   button__link__icon
                   icon
